--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,28 +9,17 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    strategy:
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run tests
-      run: |
-        python -m unittest discover tests
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        flake8 .
-    - name: Type check with mypy
-      run: |
-        pip install mypy
-        mypy src
+    # - name: Run tests
+    #   run: |
+    #     python -m unittest discover tests
+    # Uncomment bovenstaande regels wanneer je tests hebt toegevoegd
