--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    # - name: Run tests
-    #   run: |
-    #     python -m unittest discover tests
-    # Uncomment bovenstaande regels wanneer je tests hebt toegevoegd
+    - name: Run tests
+      run: |
+        python -m unittest discover tests
