--- a/settings.json
+++ b/settings.json
@@ -11,6 +11,7 @@
     "clock_time_format": "hh:mm",
     "active_widgets": [
         "clock_widget",
+        "google_calendar_widget",
         "modern_todo_widget",
         "system_monitor_widget"
     ],
